internal/gatewayapi/testdata/mergebackends-btp-backend-target-tcp-mixed-accepted-and-warning.in.yaml
envoyProxyForGatewayClass:
  apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: EnvoyProxy
  metadata:
    namespace: envoy-gateway-system
    name: test
  spec:
    mergeBackends:
      selector:
        matchLabels:
          merge-eligible: "true"
gateways:
  - apiVersion: gateway.networking.k8s.io/v1
    kind: Gateway
    metadata:
      namespace: envoy-gateway
      name: gateway-1
    spec:
      gatewayClassName: envoy-gateway-class
      listeners:
        - name: tcp1
          protocol: TCP
          port: 90
          allowedRoutes:
            namespaces:
              from: All
        - name: tcp2
          protocol: TCP
          port: 91
          allowedRoutes:
            namespaces:
              from: All
backendTrafficPolicies:
  - apiVersion: gateway.envoyproxy.io/v1alpha1
    kind: BackendTrafficPolicy
    metadata:
      namespace: default
      name: btp-backend-target
    spec:
      targetRefs:
        - group: ""
          kind: Service
          name: service-1
      mergeType: StrategicMerge
      circuitBreaker:
        maxConnections: 100
tcpRoutes:
  - apiVersion: gateway.networking.k8s.io/v1
    kind: TCPRoute
    metadata:
      namespace: default
      name: tcproute-1
    spec:
      parentRefs:
        - namespace: envoy-gateway
          name: gateway-1
          sectionName: tcp1
      rules:
        - backendRefs:
            - name: service-1
              port: 8080
  - apiVersion: gateway.networking.k8s.io/v1
    kind: TCPRoute
    metadata:
      namespace: default
      name: tcproute-2
    spec:
      parentRefs:
        - namespace: envoy-gateway
          name: gateway-1
          sectionName: tcp2
      rules:
        - backendRefs:
            - name: service-1
              port: 8080
              weight: 1
            - name: service-2
              port: 8080
              weight: 1
